vagrant setups conr

--- a/app/cfg/sockets-server.service
+++ b/app/cfg/sockets-server.service
@@ -4,7 +4,7 @@
 Description=SocketsForksPGP
 
 [Service]
-User=robert
+User=vagrant
 WorkingDirectory=/usr/bin
 ExecStart= /bin/bash /usr/bin/sockets-server.sh
 SuccessExitStatus=143
