--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "sockets,gpg,forks,php,linux.",
     "type": "library",
     "require": {
-        "php": "^8.0"
+        "php": "^8.0",
+        "predis/predis": "^2.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.4"
