--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "robert-komasara/messenger",
+    "name": "robertkomasara/messenger",
     "description": "sockets,gpg,forks,php,linux.",
     "type": "library",
     "require": {
-        "php": "^8.0"
+        "php": ">=8.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.4"
@@ -22,7 +22,7 @@
     "authors": [
         {
             "name": "Robert Komasara",
-            "email": "App@protonmail.com"
+            "email": "robertkomasara@protonmail.com"
         }
     ]
 }
